fixed navbar z-index

--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -10,6 +10,7 @@
   justify-items: center;
   background-color: var(--bg-color);
   border-bottom: 1px solid var(--link-color);
+  z-index: 100;
 }
 
 .nav-bar a {
