--- a/src/pages/Music.css
+++ b/src/pages/Music.css
@@ -53,7 +53,3 @@
   margin-top: 30px;
   text-align: center;
 }
-
-audio {
-  z-index: 1;
-}
